--- a/src/app/exercice1/exercice1-enfant/exercice1-enfant.component.html
+++ b/src/app/exercice1/exercice1-enfant/exercice1-enfant.component.html
@@ -1,9 +1,9 @@
 <br />
-<span> valeur du compteur : </span>
+<span> valeur du compteur : {{ compteurInput }}</span>
 <br />
 <br />
-<button> + </button>
+<button (click)="incremental()"> + </button>
 <br />
 <br />
-<button> - </button>
+<button (click)="decremental()"> - </button>
 <br>
